# lantalk

./: .gitignore  CMakeLists.txt  README.md  app.cpp  app.go  app.h  app_core.cpp  app_core.h  app_windows.go  chat_window.cpp  chat_window.h  core.cpp  core.h  engine.cpp  engine.h  entry_other.go  go.mod  go.sum  headless_main.cpp  lantalk_core.h  main.cpp  main.go  native_filepicker_other.go  native_filepicker_windows.go  resources.go  resources.qrc  ui_embedded.h  ui_embedded_data.h
.github/workflows/: build-win.yml  windows-build.yml
cmake/: finalize_windows_runtime.cmake
p2pchat/: README.md
p2pchat/pages/: app.js  index.html  styles.css  wrangler.toml
p2pchat/pages/functions/api/: [[path]].js
p2pchat/worker/: wrangler.toml
p2pchat/worker/src/: index.ts
src/: app_core.cpp  app_core.h  headless_main.cpp  main.cpp
src/core/: app_core.cpp  app_core.h
ui/: chat_window.cpp  chat_window.h  index.html
