cmake_minimum_required(VERSION 3.16)
project(LanTalk LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

if(WIN32)
  add_executable(lantalk WIN32 main.cpp)
  target_link_libraries(lantalk PRIVATE ws2_32 comdlg32)
else()
  add_executable(lantalk main.cpp)
endif()

if(NOT CMAKE_SIZEOF_VOID_P EQUAL 8)
  message(FATAL_ERROR "LanTalk is 64-bit only. Please use a 64-bit toolchain.")
endif()

if(MSVC)
  target_compile_options(lantalk PRIVATE /W4 /permissive-)
  target_compile_options(lantalk PRIVATE $<$<CONFIG:Release>:/O2 /Oi /GL>)
  target_link_options(lantalk PRIVATE $<$<CONFIG:Release>:/LTCG>)
else()
  target_compile_options(lantalk PRIVATE -Wall -Wextra -Wpedantic)
  target_compile_options(lantalk PRIVATE $<$<CONFIG:Release>:-O3 -DNDEBUG>)
endif()
